src/cmavsdk/plugins/shell/shell.h

// WARNING: THIS FILE IS AUTOGENERATED! As such, it should not be edited.
// Edits need to be made to the proto files
// (see https://github.com/mavlink/MAVSDK-Proto/blob/main/protos/shell/shell.proto)

#ifndef CMAVSDK_SHELL_H
#define CMAVSDK_SHELL_H

#include <stddef.h>
#include <stdint.h>
#include <stdbool.h>
#include "cmavsdk/mavsdk_export.h"

#ifdef __cplusplus
extern "C" {
#endif

/**
 * @brief Allow to communicate with the vehicle's system shell.
 */

// ===== Forward Declarations =====
typedef void* mavsdk_system_t;

// ===== Opaque Handles =====
typedef void* mavsdk_shell_t;
typedef void* mavsdk_shell_receive_handle_t;

// ===== Enums =====

// ===== Structs =====
/**
 * @brief Possible results returned for shell requests
 */
typedef enum {
    /**  Unknown result. */
    MAVSDK_SHELL_RESULT_UNKNOWN = 0,
    /**  Request succeeded. */
    MAVSDK_SHELL_RESULT_SUCCESS = 1,
    /**  No system is connected. */
    MAVSDK_SHELL_RESULT_NO_SYSTEM = 2,
    /**  Connection error. */
    MAVSDK_SHELL_RESULT_CONNECTION_ERROR = 3,
    /**  Response was not received. */
    MAVSDK_SHELL_RESULT_NO_RESPONSE = 4,
    /**  Shell busy (transfer in progress). */
    MAVSDK_SHELL_RESULT_BUSY = 5,
} mavsdk_shell_result_t;



// ===== Primitive Array Destroy Functions =====
/**
 * @brief Destroy an array of float.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_shell_float_array_destroy(float** array);
/**
 * @brief Destroy an array of double.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_shell_double_array_destroy(double** array);
/**
 * @brief Destroy an array of int32_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_shell_int32t_array_destroy(int32_t** array);
/**
 * @brief Destroy an array of uint32_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_shell_uint32t_array_destroy(uint32_t** array);
/**
 * @brief Destroy an array of int64_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_shell_int64t_array_destroy(int64_t** array);
/**
 * @brief Destroy an array of uint64_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_shell_uint64t_array_destroy(uint64_t** array);
/**
 * @brief Destroy an array of bool.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_shell_bool_array_destroy(bool** array);

/**
 * @brief Destroy a string (char*).
 *
 * Frees the memory allocated for the string.
 *
 * @param str Pointer to the string pointer. Will be set to NULL after freeing.
 */
void mavsdk_shell_string_destroy(char** str);

/**
 * @brief Destroy a byte buffer (uint8_t*).
 *
 * Frees the memory allocated for the byte buffer.
 *
 * @param buffer Pointer to the buffer pointer. Will be set to NULL after freeing.
 */
void mavsdk_shell_byte_buffer_destroy(uint8_t** buffer);

// ===== Callback Typedefs =====
typedef void (*mavsdk_shell_receive_callback_t)(const char* data, void* user_data);

// ===== Shell Creation/Destruction =====
CMAVSDK_EXPORT mavsdk_shell_t mavsdk_shell_create(mavsdk_system_t system);
CMAVSDK_EXPORT void mavsdk_shell_destroy(mavsdk_shell_t shell);

// ===== Methods =====

/**
 * @brief Get the current send (blocking).
 *
 * This function blocks until a value is available.
 *
 * @param telemetry The telemetry instance.
 * @param send_out Pointer to store the result.
 */
CMAVSDK_EXPORT
mavsdk_shell_result_t
mavsdk_shell_send(
    mavsdk_shell_t shell,
    char* command);


/**
 * @brief Receive feedback from a sent command line.
 * 
 *  This subscription needs to be made before a command line is sent, otherwise, no response will be sent.
 *
 * @param shell The shell instance.
 * @param callback Function to call when new data is available.
 * @param user_data User data to pass to the callback.
 * @return Handle for this subscription. Use mavsdk_shell_unsubscribe_receive() to unsubscribe.
 */
CMAVSDK_EXPORT mavsdk_shell_receive_handle_t mavsdk_shell_subscribe_receive(
    mavsdk_shell_t shell,
    mavsdk_shell_receive_callback_t callback,
    void* user_data);

/**
 * @brief Unsubscribe from 'receive' updates.
 *
 * Stops the subscription and frees resources associated with the handle.
 *
 * @param shell The shell instance.
 * @param handle The subscription handle returned by mavsdk_shell_subscribe_receive().
 */
CMAVSDK_EXPORT void mavsdk_shell_unsubscribe_receive(
    mavsdk_shell_t shell,
    mavsdk_shell_receive_handle_t);


#ifdef __cplusplus
}
#endif

#endif // CMAVSDK_SHELL_H