py/mavsdk/pymavsdk/plugins/shell/shell.py

# ruff: noqa: F401

# WARNING: THIS FILE IS AUTOGENERATED! As such, it should not be edited.
# Edits need to be made to the proto files
# (see https://github.com/mavlink/MAVSDK-Proto/blob/main/protos/shell/shell.proto)

"""
Allow to communicate with the vehicle's system shell.
"""

import ctypes

from typing import Callable, Any
from enum import IntEnum

from ...cmavsdk_loader import _cmavsdk_lib


# ===== Enums =====


# ===== Result Enums =====
class ShellResult(IntEnum):
    """Possible results returned for shell requests"""

    UNKNOWN = 0
    SUCCESS = 1
    NO_SYSTEM = 2
    CONNECTION_ERROR = 3
    NO_RESPONSE = 4
    BUSY = 5


# ===== Internal C Structures =====

# ===== Structures =====


# ===== Plugin =====
class Shell:
    """Allow to communicate with the vehicle's system shell."""

    def __init__(self, system):
        self._lib = _cmavsdk_lib
        self._handle = None
        self._callbacks = []  # Keep references to prevent GC

        if system is None:
            raise ValueError("system cannot be None")

        system_handle = system._handle

        if not system_handle:
            raise ValueError("system handle is null")

        self._handle = self._lib.mavsdk_shell_create(system_handle)

        if not self._handle:
            raise RuntimeError(
                "Failed to create Shell plugin - C function returned null handle"
            )

    def send(self, command):
        """Get send (blocking)"""

        result_code = self._lib.mavsdk_shell_send(
            self._handle,
            command,
        )
        result = ShellResult(result_code)
        if result != ShellResult.SUCCESS:
            raise Exception(f"send failed: {result}")

        return result

    def subscribe_receive(self, callback: Callable, user_data: Any = None):
        """Receive feedback from a sent command line.

        This subscription needs to be made before a command line is sent, otherwise, no response will be sent."""

        def c_callback(c_data, ud):
            try:
                py_data = c_data

                callback(py_data, user_data)

            except Exception as e:
                print(f"Error in receive callback: {e}")

        cb = ReceiveCallback(c_callback)
        self._callbacks.append(cb)

        return self._lib.mavsdk_shell_subscribe_receive(self._handle, cb, None)

    def unsubscribe_receive(self, handle: ctypes.c_void_p):
        """Unsubscribe from receive"""
        self._lib.mavsdk_shell_unsubscribe_receive(self._handle, handle)

    def destroy(self):
        """Destroy the plugin instance"""
        if self._handle:
            self._lib.mavsdk_shell_destroy(self._handle)
            self._handle = None

    def __del__(self):
        self.destroy()


# ===== Callback Types =====
ReceiveCallback = ctypes.CFUNCTYPE(None, ctypes.c_char_p, ctypes.c_void_p)

# ===== Setup Functions =====
_cmavsdk_lib.mavsdk_shell_create.argtypes = [ctypes.c_void_p]
_cmavsdk_lib.mavsdk_shell_create.restype = ctypes.c_void_p

_cmavsdk_lib.mavsdk_shell_destroy.argtypes = [ctypes.c_void_p]
_cmavsdk_lib.mavsdk_shell_destroy.restype = None


_cmavsdk_lib.mavsdk_shell_send.argtypes = [
    ctypes.c_void_p,
    ctypes.c_char_p,
]

_cmavsdk_lib.mavsdk_shell_send.restype = ctypes.c_int
_cmavsdk_lib.mavsdk_shell_subscribe_receive.argtypes = [
    ctypes.c_void_p,
    ReceiveCallback,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_shell_subscribe_receive.restype = ctypes.c_void_p
# Unsubscribe
_cmavsdk_lib.mavsdk_shell_unsubscribe_receive.argtypes = [
    ctypes.c_void_p,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_shell_unsubscribe_receive.restype = None
